--- a/src/app/pages/maintenance/campus/campus.component.html
+++ b/src/app/pages/maintenance/campus/campus.component.html
@@ -9,12 +9,35 @@
             <h5 class="mb-0 card-title flex-grow-1">Listado</h5>
             <div class="flex-shrink-0 d-flex gap-1">
               <a href="javascript:void(0);" class="btn btn-primary" (click)="openModal(content)">Agregar nuevo</a>
-              <a href="javascript:void(0);" (click)="listDataApi(true);" class="btn btn-light"><i class="mdi mdi-refresh"></i></a>
+              <a href="javascript:void(0);" (click)="getPageRefresh();" class="btn btn-light"><i class="mdi mdi-refresh"></i></a>
             </div>
           </div>
         </div>
         <div class="card-body border-bottom">
-
+          <h4 class="card-title">Lista de sedes</h4>
+          <p class="card-sub-title">
+            Sedes registrados hasta el momento
+          </p>
+          <div class="row mb-md-2">
+            <div class="col-sm-12 col-md-6">
+              <div class="dataTables_length" id="tickets-table_length"><label
+                class="d-inline-flex align-items-center">Mostrar
+                <select name="tickets-table_length" aria-controls="tickets-table" name="pageSize"
+                  [(ngModel)]="pagination.value.perPage" class="form-control form-control-sm mx-2" (change)="apiCampusListPagination()">
+                  <option *ngFor="let count of countElements;" [ngValue]="count">{{count}}</option>
+                </select> registros</label>
+              </div>
+            </div>
+            <!-- Search -->
+            <div class="col-sm-12 col-md-6">
+              <div id="tickets-table_filter" class="dataTables_filter text-md-end"><label
+                  class="d-inline-flex align-items-center">Buscar:
+                  <input type="search" name="searchTerm" class="form-control form-control-sm ms-2"
+                    aria-controls="tickets-table" [(ngModel)]="pagination.value.search" (input)="apiCampusListPagination()"></label>
+              </div>
+            </div>
+            <!-- End search -->
+          </div>
         </div>
         <div class="card-body">
           <div class="table-responsive">
@@ -33,9 +56,9 @@
                 </tr>
               </thead>
               <tbody>
-                <tr *ngFor="let data of lists; let i = index">
-                  <th scope="row">{{i + 1}}</th>
-                  <td>{{data.paises_nombre}}</td>
+                <tr *ngFor="let data of paginationResult.data; let i = index">
+                  <th scope="row">{{data.index}}</th>
+                  <td>{{data?.country?.nombre}}</td>
                   <td>{{data.nombre}}</td>
                   <td>{{data.ciudad}}</td>
                   <td><img *ngIf="data.logo" [src]="'http://localhost:8000/files/campus/' + data.logo" alt="render" style="max-height: 80px;"></td>
@@ -53,11 +76,42 @@
                     </ul>
                   </td>
                 </tr>
-                <tr *ngIf="!lists.length"><td colspan="9" class="text-center">Sin registros.</td></tr>
+                <tr *ngIf="!paginationResult.data.length"><td colspan="9" class="text-center">Sin registros.</td></tr>
               </tbody>
             </table>
           </div>
 
+          <!-- End table -->
+          <div class="row justify-content-md-between align-items-md-center mt-2">
+            <div class="col-sm-12 col-md-6">
+              <div class="dataTables_info mb-2" id="tickets-table_info" role="status" aria-live="polite">
+                Mostrando de
+                <b>{{paginationResult.from}}</b> al
+                <b>{{paginationResult.to}}</b> de <b>{{paginationResult.total}}</b>
+                registros
+              </div>
+            </div>
+            <!-- Pagination -->
+            <div class="col-sm-12 col-md-6">
+              <div class="text-md-right float-md-end pagination-rounded">
+                <pagination 
+                  previousText="Anterior" 
+                  nextText="Siguiente"   
+                  firstText="Primero"
+                  lastText="Ultimo"
+                  [boundaryLinks]="false" 
+                  [directionLinks]="true"  
+                  [totalItems]="paginationResult.total"
+                  [(ngModel)]="pagination.value.page" 
+                  [itemsPerPage]="pagination.value.perPage" 
+                  (pageChanged)="getPage($event)" 
+                  [maxSize]="7" 
+                  [rotate]="false"
+                  ></pagination>
+              </div>
+            </div>
+            <!-- End Pagination -->
+          </div>
         </div>
       </div>
     </div>
