--- a/src/app/pages/maintenance/product/product.component.html
+++ b/src/app/pages/maintenance/product/product.component.html
@@ -9,7 +9,7 @@
             <h5 class="mb-0 card-title flex-grow-1">Listado</h5>
             <div class="flex-shrink-0 d-flex gap-1">
               <a href="javascript:void(0);" class="btn btn-primary" (click)="openModal(content)">Agregar nuevo</a>
-              <a href="javascript:void(0);" (click)="apiProductListPagination();" class="btn btn-light"><i class="mdi mdi-refresh"></i></a>
+              <a href="javascript:void(0);" (click)="getPageRefresh();" class="btn btn-light"><i class="mdi mdi-refresh"></i></a>
             </div>
           </div>
         </div>
@@ -23,7 +23,7 @@
               <div class="dataTables_length" id="tickets-table_length"><label
                 class="d-inline-flex align-items-center">Mostrar
                 <select name="tickets-table_length" aria-controls="tickets-table" name="pageSize"
-                  [(ngModel)]="perPage" class="form-control form-control-sm mx-2" (change)="apiProductListPagination()">
+                  [(ngModel)]="pagination.value.perPage" class="form-control form-control-sm mx-2" (change)="apiProductListPagination()">
                   <option *ngFor="let count of countElements;" [ngValue]="count">{{count}}</option>
                 </select> registros</label>
               </div>
@@ -33,7 +33,7 @@
               <div id="tickets-table_filter" class="dataTables_filter text-md-end"><label
                   class="d-inline-flex align-items-center">Buscar:
                   <input type="search" name="searchTerm" class="form-control form-control-sm ms-2"
-                    aria-controls="tickets-table" [(ngModel)]="search" (input)="apiProductListPagination()"></label>
+                    aria-controls="tickets-table" [(ngModel)]="pagination.value.search" (input)="apiProductListPagination()"></label>
               </div>
             </div>
             <!-- End search -->
@@ -58,7 +58,7 @@
               </thead>
               <tbody>
                 <tr *ngFor="let data of lists; let i = index">
-                  <th scope="row">{{i + 1}}</th>
+                  <th scope="row">{{data.index}}</th>
                   <td>{{data.tipo_servicios_nombre}}</td>
                   <td>{{data.nombre}}</td>
                   <td>{{data.descripcion}}</td>
@@ -83,24 +83,37 @@
             </table>
           </div>
 
-          <!-- End table -->
-          <div class="row justify-content-md-between align-items-md-center mt-2">
-            <div class="col-sm-12 col-md-6">
-              <div class="dataTables_info mb-2" id="tickets-table_info" role="status" aria-live="polite">
-                Mostrando de 
-                <b>{{pagination.from}}</b> al
-                <b>{{pagination.to}}</b> de <b>{{pagination.total}}</b>
-                registros
-              </div>
+         <!-- End table -->
+         <div class="row justify-content-md-between align-items-md-center mt-2">
+          <div class="col-sm-12 col-md-6">
+            <div class="dataTables_info mb-2" id="tickets-table_info" role="status" aria-live="polite">
+              Mostrando de
+              <b>{{paginationResult.from}}</b> al
+              <b>{{paginationResult.to}}</b> de <b>{{paginationResult.total}}</b>
+              registros
             </div>
-            <!-- Pagination -->
-            <div class="col-sm-12 col-md-6">
-              <div class="text-md-right float-md-end pagination-rounded">
-                <pagination previousText="Anterior" nextText="Siguiente"  [totalItems]="total" [(ngModel)]="page" [itemsPerPage]="perPage" (pageChanged)="getPage($event)"></pagination>
-              </div>
-            </div>
-            <!-- End Pagination -->
           </div>
+          <!-- Pagination -->
+          <div class="col-sm-12 col-md-6">
+            <div class="text-md-right float-md-end pagination-rounded">
+              <pagination 
+                previousText="Anterior" 
+                nextText="Siguiente"   
+                firstText="Primero"
+                lastText="Ultimo"
+                [boundaryLinks]="false" 
+                [directionLinks]="true"  
+                [totalItems]="paginationResult.total"
+                [(ngModel)]="pagination.value.page" 
+                [itemsPerPage]="pagination.value.perPage" 
+                (pageChanged)="getPage($event)" 
+                [maxSize]="7" 
+                [rotate]="false"
+                ></pagination>
+            </div>
+          </div>
+          <!-- End Pagination -->
+        </div>
         </div>
       </div>
     </div>
