--- a/src/app/pages/maintenance/advertisement/advertisement.component.html
+++ b/src/app/pages/maintenance/advertisement/advertisement.component.html
@@ -37,7 +37,7 @@
 
                     <div class="text-center d-grid">
                       <a href="javascript: void(0);" class="btn btn-primary" (click)="addnewTask('internal')">
-                        Guardar</a>
+                        Guardar Orden</a>
                     </div>
                   </div>
                 </div>
@@ -62,7 +62,7 @@
                     </ng-container>
                     <div class="text-center d-grid">
                       <a href="javascript: void(0);" class="btn btn-primary" (click)="addnewTask('external')">
-                        Guardar</a>
+                        Guardar Orden</a>
                     </div>
                   </div>
                 </div>
