--- a/src/app/pages/settings/type-user-permission/type-user-permission.component.html
+++ b/src/app/pages/settings/type-user-permission/type-user-permission.component.html
@@ -3,7 +3,7 @@
 
   <select name="select"><p>Tipo de Usuario</p>
     <option value="value1">Coordinador</option>
-    <option value="value2" selected>BackOfice</option>
+    <option value="value2" selected>BackOffice</option>
     <option value="value3">Vendedor</option>
   </select>
 
