--- a/src/app/pages/sale/forms/form-sale-detail-full/form-sale-detail-full.component.html
+++ b/src/app/pages/sale/forms/form-sale-detail-full/form-sale-detail-full.component.html
@@ -53,9 +53,9 @@
     <div class="d-flex justify-content-between align-items-center flex-wrap gap-2 mb-3">
       <strong class="text-success text-uppercase font-size-16 d-flex flex-row align-items-center flex-wrap"> 
         <div [innerHTML]="typeServiceIcon" class="font-size-22 text-success me-1"></div>
-         Formulario - {{typeServiceNombre}}
+         Formulario - {{typeServiceNombre? typeServiceNombre: 'Default'}}
         </strong>
-      <button type="button" (click)="onCancel()" class="btn btn-success"><i class="mdi mdi-plus me-1"></i> {{'FORMS.FIELD_NAMES.new_service.label' | translate}}</button>
+      <!-- <button type="button" (click)="onCancel()" class="btn btn-success"><i class="mdi mdi-plus me-1"></i> {{'FORMS.FIELD_NAMES.new_service.label' | translate}}</button> -->
     </div>
     <app-form-sale-detail (cancel)="onCancel($event)" (submit)="onDataSaleDetail($event)" [typeService]="shareTypeService"></app-form-sale-detail>
   </div>
