--- a/src/app/pages/sale/tables/table-sale-detail-full/table-sale-detail-full.component.html
+++ b/src/app/pages/sale/tables/table-sale-detail-full/table-sale-detail-full.component.html
@@ -59,9 +59,39 @@
 
 <div class="card shadow-sm border border-primary mt-2">
   <div class="card-body border-bottom">
-    <div class="d-flex flex-row flex-wrap justify-content-between align-items-start">
+    <div class="d-flex flex-row flex-wrap gap-3 justify-content-between align-items-start">
       <div class="">
         <h4 class="card-title text-primary">{{title}}</h4>
+        <div class="row g-2" *ngIf="'FORMS.FIELD_NAMES.type_service.label' | translate as translatedLabel;">
+          <div class="col-md-auto pt-2">
+            <label for="" class="form-label text-uppercase font-bold"><b>{{translatedLabel}}:</b></label>
+          </div>
+          <div class="col-md-auto" >
+            <div class="input-group">
+              <ng-select [(ngModel)]="typeServiceId"
+                class="flex-grow-1"
+                [notFoundText]="'No se encontraron elementos'"
+                [ngClass]="{ 'is-invalid': !typeServiceId }">
+                <ng-option [value]="''">{{'FORMS.FIELD_NAMES.type_service.default_option' | translate}}</ng-option>
+                <ng-option *ngFor="let typeService of listTypeService"
+                  [value]="typeService.id"> 
+                  <div class="d-flex flex-row align-items-center">
+                    <div [innerHTML]="typeService.icono" class="font-size-16 text-info me-1"></div>
+                    {{typeService.nombre}}
+                  </div>
+                </ng-option>
+              </ng-select>
+              <button type="button" (click)="openFormService()" class="btn btn-primary"><i class="mdi mdi-plus me-1"></i> {{'FORMS.BUTTONS.ADD' | translate}}</button>
+              <div
+                *ngIf="!typeServiceId"
+                class="invalid-feedback" align="left">
+                <div>
+                  {{'FORMS.VALIDATION.required' | translate | replaceAttribute:':attribute':translatedLabel}}
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
       <div class="d-flex gap-2">
         <button type="button" class="btn btn-md btn-primary" (click)="toggleForm()" [ngClass]="{'btn-success': isCollapseForm, 'btn-primary': !isCollapseForm}">
@@ -74,7 +104,14 @@
   
   <!-- FORMULARIO DE SERVICIOS -->
   <div class="card-body border-bottom border-primary" [collapse]="isCollapseForm" [isAnimated]="true">
-    <app-form-sale-detail-full [listBrand]="listBrand"></app-form-sale-detail-full>
+    <app-form-sale-detail-full 
+      [listBrand]="listBrand" 
+      [typeServiceId]="typeServiceId"
+      [typeServiceIcon]="typeServiceIcon"
+      [typeServiceNombre]="typeServiceNombre"
+      [shareTypeService]="shareTypeService"
+      (cancel)="onCancel($event)"
+      ></app-form-sale-detail-full>
   </div>
 
   <!-- LISTA DE SERVICIOS AÑADIDOS -->
