--- a/src/app/pages/reports/all/all.component.html
+++ b/src/app/pages/reports/all/all.component.html
@@ -14,7 +14,7 @@
               <div class="card-body d-flex align-items-center justify-content-between">
                 <a href="http://localhost:4200/maintenances/user" class="text-white">Ver Detalle</a>
 
-                <span class="text-white">13</span>
+                <span class="text-white"><b style="font-size: 18px;">{{count_user}}</b></span>
               </div>
             </div>
           </div>
@@ -25,7 +25,7 @@
               <div class="card-body d-flex align-items-center justify-content-between">
                 <a href="http://localhost:4200/maintenances/product" class="text-white">Ver Detalle</a>
 
-                <span class="text-white">7</span>
+                <span class="text-white"><b style="font-size: 18px;">{{count_product}}</b></span>
               </div>
             </div>
           </div>
@@ -36,7 +36,7 @@
               <div class="card-body d-flex align-items-center justify-content-between">
                 <a href="http://localhost:4200/sale" class="text-white">Ver Detalle</a>
 
-                <span class="text-white" >5</span>
+                <span class="text-white"><b style="font-size: 18px;">{{count_sale}}</b></span>
               </div>
             </div>
           </div>
