Cambios en frontend

--- a/src/app/pages/reports/all/all.component.html
+++ b/src/app/pages/reports/all/all.component.html
@@ -21,7 +21,7 @@
           <div class="col-xl-4 col-md-6">
             <div class="card bg-secondary">
               <br>
-              <div class="card-title d flex text-white text-center"> Productos <i class="fas fa-sun"></i></div>
+              <div class="card-title d flex text-white text-center"> Servicios <i class="fas fa-sun"></i></div>
               <div class="card-body d-flex align-items-center justify-content-between">
                 <a href="http://localhost:4200/maintenances/product" class="text-white">Ver Detalle</a>
 
