--- a/src/app/pages/maintenance/product/product.component.html
+++ b/src/app/pages/maintenance/product/product.component.html
@@ -14,9 +14,9 @@
           </div>
         </div>
         <div class="card-body border-bottom">
-          <h4 class="card-title">Lista de productos</h4>
+          <h4 class="card-title">Lista de Productos y Servicios</h4>
           <p class="card-sub-title">
-            Productos registrados hasta el momento
+            Productos y Servicios registrados hasta el momento
           </p>
           <div class="row mb-md-2">
             <div class="col-sm-12 col-md-6">
